--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/header :: head ('블로그')"></head>
+<head th:replace="layout/header :: head ('XYAB')"></head>
 <body class="d-flex flex-column h-100">
 <header th:replace="layout/header :: header"></header>
 
