--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head(title)">
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{../../css/sticky-footer-navbar.css}">
-    <link rel="stylesheet" th:href="@{../../static/style.css}">
-    <link rel="stylesheet" th:href="@{../../static/user-save.css}">
+    <link rel="stylesheet" th:href="@{../../static/css/style.css}">
+    <link rel="stylesheet" th:href="@{../../static/css/user-save.css}">
 
-    <title th:text="${title}">블로그</title>
+    <title th:text="${title}">XYAB</title>
 </head>
 <body>
 
@@ -19,17 +19,26 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">내가 만든 블로그</a>
+            <a class="navbar-brand" href="/">XYAB</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/user/login">로그인</a>
+                        <a sec:authorize="isAnonymous()" class="nav-link" href="/auth/user/login">로그인</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="auth/user/save">회원가입</a>
+                        <a sec:authorize="isAnonymous()" class="nav-link" href="/auth/user/save">회원가입</a>
+                    </li>
+                    <li class="nav-item">
+                        <a sec:authorize="isAuthenticated()" class="nav-link" href="/board/save">글쓰기</a>
+                    </li>
+                    <li class="nav-item">
+                        <a sec:authorize="isAuthenticated()" class="nav-link" href="/user/update">회원정보</a>
+                    </li>
+                    <li class="nav-item">
+                        <a sec:authorize="isAuthenticated()" class="nav-link" href="/logout">로그아웃</a>
                     </li>
                 </ul>
                 <form class="d-flex">
