--- a/src/main/resources/templates/layout/user/user-login.html
+++ b/src/main/resources/templates/layout/user/user-login.html
@@ -26,7 +26,8 @@
             </div>
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input type="checkbox" value="remember-me" id="rememberMe">
+                    <label for="rememberMe" aria-describedby="rememberMeHelp">로그인 유지</label>
                 </label>
             </div>
             <button class="w-100 btn btn-lg btn-success" id="btn-login">로그인</button>
