--- a/src/main/resources/templates/index-backup.html
+++ b/src/main/resources/templates/index-backup.html
@@ -6,17 +6,28 @@
 
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-        <div class="container">
-            <div class="p-2"></div>
-            <div th:each="board : ${boards}" class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                <div class="col p-4 d-flex flex-column position-static">
-                    <a th:href="@{/board/{id}(id=${board.id})}" class=".a-title">
-                        <h3 class="mb-0 title" style="padding-bottom: 10px;" th:text="${board.title}">제목</h3>
-                    </a>
-                    <div class="card-text mb-auto" th:text="${board.content}"></div>
-                    <div class="mb-1 text-muted" style="padding-top: 15px;" th:text="${#temporals.format(board.createdDate, 'yyyy-MM-dd HH:mm')}">날짜</div>
-                </div>
+        <div class="container mt-auto">
+            <div id="mainHide">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th class="col-md-1">#</th>
+                        <th class="col-md-5">제목</th>
+                        <th class="col-md-2">작성자</th>
+                        <th class="col-md-2">작성일</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="board : ${boards}">
+                        <td th:text="${board.id}"></td>
+                        <td><a th:href="@{/board/{id}(id=${board.id})}" th:text="${board.title}"></a></td>
+                        <td th:text="${board.user.username}"></td>
+                        <td th:text="${#temporals.format(board.createdDate, 'yyyy-MM-dd')}"></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
+            <br>
         </div>
     </main>
 
