--- a/src/main/resources/templates/layout/user/user-update.html
+++ b/src/main/resources/templates/layout/user/user-update.html
@@ -1,75 +1,74 @@
 <!doctype html>
-<html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/header :: head ('회원수정')"></head>
 <body class="text-center d-flex flex-column h-100">
-<header th:replace="layout/header :: header"></header>
+    <header th:replace="layout/header :: header"></header>
 
-<main class="form-signin">
-    <div class="container border rounded flex-md-row mb-4 shadow-sm h-md-250">
-        <form>
-            <h1 class="h3 m-3 fw-normal">회원 정보 수정</h1>
-            <input type="hidden" id="id" th:value="${#authentication.principal.id}">
-            <div class="form-floating m-3">
-                <input type="text" th:value="${#authentication.principal.username}" class="form-control" id="username" placeholder="아이디를 입력하세요." required
-                       minlength="4" size="20" readonly>
-                <label for="username">아이디</label>
-                <div class="valid-feedback">
-                    사용 가능한 아이디입니다.
+    <main class="form-signin">
+        <div class="container border rounded flex-md-row mb-4 shadow-sm h-md-250">
+            <form id="needs-validation" novalidate>
+                <h1 class="h3 m-3 fw-normal">회원 정보 수정</h1>
+                <input type="hidden" id="id" th:value="${#authentication.principal.id}">
+                <div class="form-floating m-3">
+                    <input type="text" th:value="${#authentication.principal.username}" class="form-control" id="username" placeholder="아이디를 입력하세요." required
+                           minlength="4" size="20" readonly>
+                    <label for="username">아이디</label>
+                    <div class="valid-feedback">
+                        사용 가능한 아이디입니다.
+                    </div>
+                    <div class="invalid-feedback">
+                        아이디는 4자 이상 입력해야 합니다.
+                    </div>
                 </div>
-                <div class="invalid-feedback">
-                    아이디는 4자 이상 입력해야 합니다.
-                </div>
-            </div>
 
-            <div class="form-floating m-3">
-                <input type="password" class="form-control" id="password" placeholder="패스워드를 입력하세요." required
-                       minlength="8" size="20">
-                <label for="password">패스워드</label>
-                <div class="valid-feedback">
-                    사용 가능한 패스워드입니다.
+                <div class="form-floating m-3">
+                    <input type="password" class="form-control" id="password" placeholder="패스워드를 입력하세요." required
+                           minlength="8" size="20">
+                    <label for="password">패스워드</label>
+                    <div class="valid-feedback">
+                        사용 가능한 패스워드입니다.
+                    </div>
+                    <div class="invalid-feedback">
+                        패스워드는 8자 이상 입력해야 합니다.
+                    </div>
                 </div>
-                <div class="invalid-feedback">
-                    패스워드는 8자 이상 입력해야 합니다.
+                <div class="form-floating m-3">
+                    <input type="email" th:value="${#authentication.principal.email}" class="form-control" id="email" placeholder="이메일을 입력하세요." required readonly>
+                    <label for="email">이메일</label>
+                    <div class="valid-feedback">
+                        사용 가능한 이메일입니다.
+                    </div>
+                    <div class="invalid-feedback">
+                        이메일 형식으로 입력해야 합니다.
+                    </div>
                 </div>
+                <div class="form-floating m-3">
+                    <input type="text" th:value="${#authentication.principal.nickname}" class="form-control" id="nickname" placeholder="닉네임을 입력하세요." required
+                           minlength="4" size="20">
+                    <label for="nickname">닉네임</label>
+                    <div class="valid-feedback">
+                        사용 가능한 닉네임입니다.
+                    </div>
+                    <div class="invalid-feedback">
+                        닉네임은 4자 이상 입력해야 합니다.
+                    </div>
+                </div>
+            </form>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-success me-2" id="btn-update" style="width: 120px; height: 50px;">회원수정</button>
+                <button class="btn btn-danger" style="width: 120px; height: 50px; margin-bottom: 40px;" id="btn-delete" th:onclick="|location.href='@{/user/delete}'|">회원탈퇴</button>
             </div>
-            <div class="form-floating m-3">
-                <input type="email" th:value="${#authentication.principal.email}" class="form-control" id="email" placeholder="이메일을 입력하세요." required readonly>
-                <label for="email">이메일</label>
-                <div class="valid-feedback">
-                    사용 가능한 이메일입니다.
-                </div>
-                <div class="invalid-feedback">
-                    이메일 형식으로 입력해야 합니다.
-                </div>
-            </div>
-            <div class="form-floating m-3">
-                <input type="text" th:value="${#authentication.principal.nickname}" class="form-control" id="nickname" placeholder="닉네임을 입력하세요." required
-                       minlength="4" size="20">
-                <label for="nickname">닉네임</label>
-                <div class="valid-feedback">
-                    사용 가능한 닉네임입니다.
-                </div>
-                <div class="invalid-feedback">
-                    닉네임은 4자 이상 입력해야 합니다.
-                </div>
-            </div>
-        </form>
-        <div class="d-flex justify-content-center mb-3">
-            <button class="w-100 btn btn-success btn-sm me-1" id="btn-update">회원수정</button>
-            <button class="w-100 btn btn-danger btn-sm" id="btn-delete" th:onclick="|location.href='@{/user/delete}'|">회원탈퇴</button>
         </div>
-    </div>
-</main>
+    </main>
 
-<footer th:replace="layout/footer :: footer"></footer>
+    <footer th:replace="layout/footer :: footer"></footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script th:src="@{/js/validation-update.js}"></script>
-<script th:src="@{/js/user.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script th:src="@{/js/validation-update.js}"></script>
+    <script th:src="@{/js/user.js}"></script>
 </body>
-
 </html>
