--- a/src/main/resources/templates/layout/board/board-detail.html
+++ b/src/main/resources/templates/layout/board/board-detail.html
@@ -20,7 +20,7 @@
                 <li class="list-inline-item">
                     <ul>
                         <li class="list-inline-item">작성자 : </li>
-                        <li class="list-inline-item" th:text="${board.user.username}"></li>
+                        <li class="list-inline-item" th:text="${board.user.nickname}"></li>
                     </ul>
                 </li>
                 <li class="list-inline-item">
@@ -41,7 +41,7 @@
             </div>
             <div class="list-inline">
                 <div th:if="${board.user.id == #authentication.principal.id}">
-                    <a th:href="@{/board/{id}/update(id=${board.id})}" class="btn btn-warning" id="btn-update">수정</a>
+                    <a th:href="@{/board/{id}/update(id=${board.id})}" class="btn btn-warning">수정</a>
                     <button class="btn btn-danger" id="btn-delete">삭제</button>
                 </div>
                 <button class="btn btn-secondary d-flex justify-content-start" th:onclick="|location.href='@{/}'|">목록으로</button>
@@ -71,7 +71,8 @@
                     <ul class="list-group" id="reply--box" th:each="reply : ${board.replyList}">
                         <li th:id="'reply--' + ${reply.id}" class="list-group-item d-flex justify-content-center">
                             <span class="text-monospace mr-1 me-1">작성자 : </span>
-                            <div class="text-monospace me-1" th:text="${reply.user.username}"> &nbsp;</div>
+                            <div class="text-monospace me-1" th:text="${reply.user.nickname}"></div>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <div th:text="${reply.content}" class="me-3"></div>
                             <div class="d-flex">
                                 <span th:if="${reply.user.id == #authentication.principal.id}">
