--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,6 @@
                     <a th:href="@{/board/{id}(id=${board.id})}" class=".a-title">
                         <h3 class="mb-0 title" style="padding-bottom: 10px;" th:text="${board.title}">제목</h3>
                     </a>
-<!--                    <div class="card-text mb-auto" th:text="${board.content}"></div>-->
                     <div class="mb-1 text-muted" style="padding-top: 15px;" th:text="${#temporals.format(board.createdDate, 'yyyy-MM-dd HH:mm')}">날짜</div>
                 </div>
             </div>
@@ -37,14 +36,14 @@
 
     <!-- Search Bar -->
     <form class="d-flex" style="position: relative; top: 40px;" method="get" th:action="@{/}">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search
-"              id="search" name="search" th:value="${param.search}">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+               id="search" name="search" th:value="${param.search}">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
 
     <footer th:replace="layout/footer :: footer"></footer>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
